--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,6 @@ fschat==0.2.32
 fsspec==2024.2.0
 google-auth==2.29.0
 googleapis-common-protos==1.63.0
-gptcache==0.1.43
 greenlet==3.0.3
 grpcio==1.62.1
 grpcio-tools==1.62.1
@@ -122,6 +121,7 @@ langid==1.1.6
 langsmith==0.1.40
 layoutparser==0.3.4
 lazy_loader==0.4
+libretranslatepy==2.1.1
 lm-eval @ git+https://github.com/EleutherAI/lm-evaluation-harness.git@cc9778fbe4fa1a709be2abed9deb6180fd40e7e2
 lxml==5.2.1
 Markdown==3.6
@@ -292,15 +292,16 @@ timm==0.9.16
 tinycss2==1.2.1
 tokenizers==0.15.2
 tomli==2.0.1
-torch==2.2.0+cpu
-torchaudio==2.2.0
-torchvision==0.17.0+cpu
+torch==2.2.2+cu121
+torchaudio==2.2.2+cu121
+torchvision==0.17.2+cu121
 tornado==6.4
 tqdm==4.66.2
 tqdm-multiprocess==0.0.11
 traitlets==5.14.2
 transformers==4.39.3
 transformers-stream-generator==0.0.5
+translate==3.6.1
 triton==2.2.0
 typepy==1.3.2
 typer==0.12.1
